# interview-agent

./: .gitignore  HISTORY.md  PRD.md  PROJECT_MAP.md  README.md  TODO.md  commit.sh  commit2.sh  main.py  pyproject.toml  resume  temp_skill.md  test.py  test_import.py  web_app.py
config/: prompts.py  settings.py
src/graph/: knowledge_graph.py  resume_graph.py  workflow.py
src/nodes/: chatter.py  evaluator.py  knowledge_chatter.py  knowledge_evaluator.py  knowledge_questioner.py  knowledge_saver.py  knowledge_scanner.py  questioner.py  resume_chatter.py  resume_evaluator.py  resume_parser.py  resume_questioner.py  resume_reporter.py  resume_saver.py  resume_summary.py  saver.py  scanner.py
src/schemas/: data_models.py  enums.py  resume_models.py  states.py
src/utils/: database.py  files_ops.py  llm_fatory.py  logger.py  pdf_reader.py
src/web/: __init__.py
src/web/components/: chat.py  knowledge_chat.py  resume_chat.py  sidebar.py
src/web/services/: interview.py  records.py
tests/: test_resume_interview.py
