[project]
name = "interview-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.4",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langsmith>=0.7.23",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]
